@@ -19,22 +19,20 @@ import com.facebook.presto.cassandra.util.HostAddressFactory;
 import com.facebook.presto.spi.ColumnHandle;
 import com.facebook.presto.spi.ConnectorPartition;
 import com.facebook.presto.spi.ConnectorPartitionResult;
+import com.facebook.presto.spi.ConnectorSession;
 import com.facebook.presto.spi.ConnectorSplit;
 import com.facebook.presto.spi.ConnectorSplitManager;
 import com.facebook.presto.spi.ConnectorSplitSource;
 import com.facebook.presto.spi.ConnectorTableHandle;
-import com.facebook.presto.spi.Domain;
 import com.facebook.presto.spi.FixedSplitSource;
 import com.facebook.presto.spi.HostAddress;
 import com.facebook.presto.spi.PrestoException;
-import com.facebook.presto.spi.Range;
-import com.facebook.presto.spi.TupleDomain;
-import com.google.common.base.Predicate;
+import com.facebook.presto.spi.predicate.Domain;
+import com.facebook.presto.spi.predicate.Range;
+import com.facebook.presto.spi.predicate.TupleDomain;
 import com.google.common.base.Throwables;
-import com.google.common.collect.FluentIterable;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Lists;
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.ListenableFuture;
@@ -44,10 +42,12 @@ import io.airlift.log.Logger;
 import javax.inject.Inject;
 
 import java.io.IOException;
+import java.util.ArrayList;
+import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
 
@@ -55,10 +55,11 @@ import static com.facebook.presto.cassandra.util.CassandraCqlUtils.toCQLCompatib
 import static com.facebook.presto.cassandra.util.Types.checkType;
 import static com.facebook.presto.spi.StandardErrorCode.EXTERNAL;
 import static com.google.common.base.MoreObjects.toStringHelper;
-import static com.google.common.base.Preconditions.checkNotNull;
 import static com.google.common.base.Predicates.in;
 import static com.google.common.base.Predicates.not;
 import static com.google.common.util.concurrent.MoreExecutors.listeningDecorator;
+import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.toList;
 
 public class CassandraSplitManager
         implements ConnectorSplitManager
@@ -80,19 +81,19 @@ public class CassandraSplitManager
             CassandraTokenSplitManager tokenSplitMgr,
             @ForCassandra ExecutorService executor)
     {
-        this.connectorId = checkNotNull(connectorId, "connectorId is null").toString();
-        this.schemaProvider = checkNotNull(schemaProvider, "schemaProvider is null");
-        this.cassandraSession = checkNotNull(cassandraSession, "cassandraSession is null");
+        this.connectorId = requireNonNull(connectorId, "connectorId is null").toString();
+        this.schemaProvider = requireNonNull(schemaProvider, "schemaProvider is null");
+        this.cassandraSession = requireNonNull(cassandraSession, "cassandraSession is null");
         this.partitionSizeForBatchSelect = cassandraClientConfig.getPartitionSizeForBatchSelect();
         this.tokenSplitMgr = tokenSplitMgr;
         this.executor = listeningDecorator(executor);
     }
 
     @Override
-    public ConnectorPartitionResult getPartitions(ConnectorTableHandle tableHandle, TupleDomain<ColumnHandle> tupleDomain)
+    public ConnectorPartitionResult getPartitions(ConnectorSession session, ConnectorTableHandle tableHandle, TupleDomain<ColumnHandle> tupleDomain)
     {
         CassandraTableHandle cassandraTableHandle = checkType(tableHandle, CassandraTableHandle.class, "tableHandle");
-        checkNotNull(tupleDomain, "tupleDomain is null");
+        requireNonNull(tupleDomain, "tupleDomain is null");
         CassandraTable table = schemaProvider.getTable(cassandraTableHandle);
         List<CassandraColumnHandle> partitionKeys = table.getPartitionKeyColumns();
 
@@ -101,10 +102,9 @@ public class CassandraSplitManager
         log.debug("%s.%s #partitions: %d", cassandraTableHandle.getSchemaName(), cassandraTableHandle.getTableName(), allPartitions.size());
 
         // do a final pass to filter based on fields that could not be used to build the prefix
-        List<ConnectorPartition> partitions = FluentIterable.from(allPartitions)
-                .filter(partitionMatches(tupleDomain))
-                .filter(ConnectorPartition.class)
-                .toList();
+        List<ConnectorPartition> partitions = allPartitions.stream()
+                .filter(partition -> tupleDomain.overlaps(partition.getTupleDomain()))
+                .collect(toList());
 
         // All partition key domains will be fully evaluated, so we don't need to include those
         TupleDomain<ColumnHandle> remainingTupleDomain = TupleDomain.none();
@@ -115,14 +115,14 @@ public class CassandraSplitManager
             else {
                 @SuppressWarnings({"rawtypes", "unchecked"})
                 List<ColumnHandle> partitionColumns = (List) partitionKeys;
-                remainingTupleDomain = TupleDomain.withColumnDomains(Maps.filterKeys(tupleDomain.getDomains(), not(in(partitionColumns))));
+                remainingTupleDomain = TupleDomain.withColumnDomains(Maps.filterKeys(tupleDomain.getDomains().get(), not(in(partitionColumns))));
             }
         }
 
         // push down indexed column fixed value predicates only for unpartitioned partition which uses token range query
         if (partitions.size() == 1 && ((CassandraPartition) partitions.get(0)).isUnpartitioned()) {
-            Map<ColumnHandle, Domain> domains = tupleDomain.getDomains();
-            List<ColumnHandle> indexedColumns = Lists.newArrayList();
+            Map<ColumnHandle, Domain> domains = tupleDomain.getDomains().get();
+            List<ColumnHandle> indexedColumns = new ArrayList<>();
             // compose partitionId by using indexed column
             StringBuilder sb = new StringBuilder();
             for (Map.Entry<ColumnHandle, Domain> entry : domains.entrySet()) {
@@ -130,8 +130,8 @@ public class CassandraSplitManager
                 Domain domain = entry.getValue();
                 if (column.isIndexed() && domain.isSingleValue()) {
                     sb.append(CassandraCqlUtils.validColumnName(column.getName()))
-                      .append(" = ")
-                      .append(CassandraCqlUtils.cqlValue(toCQLCompatibleString(entry.getValue().getSingleValue()), column.getCassandraType()));
+                            .append(" = ")
+                            .append(CassandraCqlUtils.cqlValue(toCQLCompatibleString(entry.getValue().getSingleValue()), column.getCassandraType()));
                     indexedColumns.add(column);
                     // Only one indexed column predicate can be pushed down.
                     break;
@@ -139,8 +139,8 @@ public class CassandraSplitManager
             }
             if (sb.length() > 0) {
                 CassandraPartition partition = (CassandraPartition) partitions.get(0);
-                TupleDomain<ColumnHandle> filterIndexedColumn = TupleDomain.withColumnDomains(Maps.filterKeys(remainingTupleDomain.getDomains(), not(in(indexedColumns))));
-                partitions = Lists.newArrayList();
+                TupleDomain<ColumnHandle> filterIndexedColumn = TupleDomain.withColumnDomains(Maps.filterKeys(remainingTupleDomain.getDomains().get(), not(in(indexedColumns))));
+                partitions = new ArrayList<>();
                 partitions.add(new CassandraPartition(partition.getKey(), sb.toString(), filterIndexedColumn, true));
                 return new ConnectorPartitionResult(partitions, filterIndexedColumn);
             }
@@ -148,13 +148,13 @@ public class CassandraSplitManager
         return new ConnectorPartitionResult(partitions, remainingTupleDomain);
     }
 
-    private List<CassandraPartition> getCassandraPartitions(final CassandraTable table, TupleDomain<ColumnHandle> tupleDomain)
+    private List<CassandraPartition> getCassandraPartitions(CassandraTable table, TupleDomain<ColumnHandle> tupleDomain)
     {
         if (tupleDomain.isNone()) {
             return ImmutableList.of();
         }
 
-        Set<List<Comparable<?>>> partitionKeysSet = getPartitionKeysSet(table, tupleDomain);
+        Set<List<Object>> partitionKeysSet = getPartitionKeysSet(table, tupleDomain);
 
         // empty filter means, all partitions
         if (partitionKeysSet.isEmpty()) {
@@ -162,15 +162,8 @@ public class CassandraSplitManager
         }
 
         ImmutableList.Builder<ListenableFuture<List<CassandraPartition>>> getPartitionResults = ImmutableList.builder();
-        for (final List<Comparable<?>> partitionKeys : partitionKeysSet) {
-            getPartitionResults.add(executor.submit(new Callable<List<CassandraPartition>>()
-            {
-                @Override
-                public List<CassandraPartition> call()
-                {
-                    return schemaProvider.getPartitions(table, partitionKeys);
-                }
-            }));
+        for (List<Object> partitionKeys : partitionKeysSet) {
+            getPartitionResults.add(executor.submit(() -> schemaProvider.getPartitions(table, partitionKeys)));
         }
 
         ImmutableList.Builder<CassandraPartition> partitions = ImmutableList.builder();
@@ -190,11 +183,11 @@ public class CassandraSplitManager
         return partitions.build();
     }
 
-    private static Set<List<Comparable<?>>> getPartitionKeysSet(CassandraTable table, TupleDomain<ColumnHandle> tupleDomain)
+    private static Set<List<Object>> getPartitionKeysSet(CassandraTable table, TupleDomain<ColumnHandle> tupleDomain)
     {
-        ImmutableList.Builder<Set<Comparable<?>>> partitionColumnValues = ImmutableList.builder();
+        ImmutableList.Builder<Set<Object>> partitionColumnValues = ImmutableList.builder();
         for (CassandraColumnHandle columnHandle : table.getPartitionKeyColumns()) {
-            Domain domain = tupleDomain.getDomains().get(columnHandle);
+            Domain domain = tupleDomain.getDomains().get().get(columnHandle);
 
             // if there is no constraint on a partition key, return an empty set
             if (domain == null) {
@@ -206,30 +199,40 @@ public class CassandraSplitManager
                 return ImmutableSet.of();
             }
 
-            ImmutableSet.Builder<Comparable<?>> columnValues = ImmutableSet.builder();
-            for (Range range : domain.getRanges()) {
-                // if the range is not a single value, we can not perform partition pruning
-                if (!range.isSingleValue()) {
-                    return ImmutableSet.of();
-                }
-                Comparable<?> value = range.getSingleValue();
+            Set<Object> values = domain.getValues().getValuesProcessor().transform(
+                    ranges -> {
+                        ImmutableSet.Builder<Object> columnValues = ImmutableSet.builder();
+                        for (Range range : ranges.getOrderedRanges()) {
+                            // if the range is not a single value, we can not perform partition pruning
+                            if (!range.isSingleValue()) {
+                                return ImmutableSet.of();
+                            }
+                            Object value = range.getSingleValue();
 
-                CassandraType valueType = columnHandle.getCassandraType();
-                columnValues.add(valueType.getValueForPartitionKey(value));
-
-            }
-            partitionColumnValues.add(columnValues.build());
+                            CassandraType valueType = columnHandle.getCassandraType();
+                            columnValues.add(valueType.validatePartitionKey(value));
+                        }
+                        return columnValues.build();
+                    },
+                    discreteValues -> {
+                        if (discreteValues.isWhiteList()) {
+                            return ImmutableSet.copyOf(discreteValues.getValues());
+                        }
+                        return ImmutableSet.of();
+                    },
+                    allOrNone -> ImmutableSet.of());
+            partitionColumnValues.add(values);
         }
         return Sets.cartesianProduct(partitionColumnValues.build());
     }
 
     @Override
-    public ConnectorSplitSource getPartitionSplits(ConnectorTableHandle tableHandle, List<ConnectorPartition> partitions)
+    public ConnectorSplitSource getPartitionSplits(ConnectorSession session, ConnectorTableHandle tableHandle, List<ConnectorPartition> partitions)
     {
-        checkNotNull(tableHandle, "tableHandle is null");
+        requireNonNull(tableHandle, "tableHandle is null");
         CassandraTableHandle cassandraTableHandle = checkType(tableHandle, CassandraTableHandle.class, "tableHandle");
 
-        checkNotNull(partitions, "partitions is null");
+        requireNonNull(partitions, "partitions is null");
         if (partitions.isEmpty()) {
             return new FixedSplitSource(connectorId, ImmutableList.<ConnectorSplit>of());
         }
@@ -292,14 +295,14 @@ public class CassandraSplitManager
         boolean singlePartitionKeyColumn = true;
         String partitionKeyColumnName = null;
         if (!partitions.isEmpty()) {
-            singlePartitionKeyColumn = partitions.get(0).getTupleDomain().getNullableColumnDomains().size() == 1;
+            singlePartitionKeyColumn = partitions.get(0).getTupleDomain().getDomains().get().size() == 1;
             if (singlePartitionKeyColumn) {
                 String partitionId = partitions.get(0).getPartitionId();
-                partitionKeyColumnName = partitionId.substring(0, partitionId.lastIndexOf("=") - 1);
+                partitionKeyColumnName = partitionId.substring(0, partitionId.lastIndexOf('=') - 1);
             }
         }
-        Map<Set<String>, Set<String>> hostsToPartitionKeys = Maps.newHashMap();
-        Map<Set<String>, List<HostAddress>> hostMap = Maps.newHashMap();
+        Map<Set<String>, Set<String>> hostsToPartitionKeys = new HashMap<>();
+        Map<Set<String>, List<HostAddress>> hostMap = new HashMap<>();
 
         for (ConnectorPartition partition : partitions) {
             CassandraPartition cassandraPartition = checkType(partition, CassandraPartition.class, "partition");
@@ -315,10 +318,10 @@ public class CassandraSplitManager
                 // partition key values
                 Set<String> values = hostsToPartitionKeys.get(hostAddresses);
                 if (values == null) {
-                    values = Sets.newHashSet();
+                    values = new HashSet<>();
                 }
                 String partitionId = cassandraPartition.getPartitionId();
-                values.add(partitionId.substring(partitionId.lastIndexOf("=") + 2));
+                values.add(partitionId.substring(partitionId.lastIndexOf('=') + 2));
                 hostsToPartitionKeys.put(hostAddresses, values);
                 hostMap.put(hostAddresses, addresses);
             }
@@ -362,17 +365,5 @@ public class CassandraSplitManager
         return toStringHelper(this)
                 .add("clientId", connectorId)
                 .toString();
-    }
-
-    public static Predicate<CassandraPartition> partitionMatches(final TupleDomain<ColumnHandle> tupleDomain)
-    {
-        return new Predicate<CassandraPartition>()
-        {
-            @Override
-            public boolean apply(CassandraPartition partition)
-            {
-                return tupleDomain.overlaps(partition.getTupleDomain());
-            }
-        };
     }
 }
